@@ -33,7 +33,7 @@ class BntFile
         // It will loop thru the list of the ini variables, and push them into the db.
         $ini_keys = parse_ini_file ($ini_file, true);
 
-        $status = true; // This variable allows us to track the inserts into the databse. If one fails, the whole process is considered failed.
+        $status_array = array();
         $i = 0;
         $resa = $db->StartTrans (); // We enclose the inserts in a transaction as it is roughly 30 times faster
         DbOp::dbResult ($db, $resa, __LINE__, __FILE__);
@@ -46,23 +46,25 @@ class BntFile
                 $config_value = utf8_encode ($config_value);
                 $debug_query = $db->Execute ("INSERT into {$db->prefix}$ini_table (name, category, value, section) VALUES (?,?,?,?)", array ($config_key, $config_category, $config_value, $section));
                 DbOp::dbResult ($db, $debug_query, __LINE__, __FILE__);
-                if (!$debug_query)
+                if ($debug_query === false)
                 {
-                    $status[$i] = $debug_query;
+                    $status_array[$i] = $debug_query;
                     $i++;
                 }
             }
         }
 
-        $trans_status = $db->CompleteTrans(); // Complete the transaction
-        DbOp::dbResult ($db, $trans_status, __LINE__, __FILE__);
+        $status_array[$i] = $db->CompleteTrans(); // Complete the transaction
+        DbOp::dbResult ($db, $status_array[$i], __LINE__, __FILE__);
 
-        if ($trans_status !== true)
+        if ($status_array[$i] === false)
         {
-            $status[$i] = $debug_query;
-            $i++;
+            return $status_array;
         }
-        return $status;
+        else
+        {
+            return true;
+        }
     }
 }
 ?>
