@@ -21,10 +21,12 @@
 // All sched_* vars are in minutes.
 // These are true minutes, no matter to what interval you're running the scheduler script
 // The scheduler will auto-adjust, possibly running many of the same events in a single call.
+// True / False items are 1/0 respectively
+
 [MAIN]
 game_name                  = 'Default Game Name';              // Please set this to a unique name for your game
-server_closed              = false;                            // True = block logins but not new account creation
-account_creation_closed    = false;                            // True = block new account creation
+server_closed              = 0;                                // True / 1 = block logins but not new account creation
+account_creation_closed    = 0;                                // True / 1 = block new account creation
 release_version            = '0.663';                          // Please do not change this. Doing so will cause problems for the server lists, and setupinfo, and more.
 
 [MAIL SYSTEM SETTINGS]
@@ -47,13 +49,13 @@ doomsday_value             = 90000000;                         // Number of colo
 max_turns                  = 2500;                             // The maximum number of turns a player can receive
 
 [OPTIONAL_FEATURES]
-allow_fullscan             = true;                             // Allow players to use full long range scan during this game?
-allow_navcomp              = true;                             // Allow players to use the Navigation computer during this game?
-allow_ibank                = true;                             // Allow players to use the Intergalactic Bank IGB during this game?
-allow_genesis_destroy      = false;                            // Allow players to use genesis torps to destroy planets?
-allow_sofa                 = false;                            // Is the sub-orbital fighter sofa attack allowed in this game?
-allow_ksm                  = true;                             // Is the known space map allowed in this game?
-display_password           = false;                            // If true, will display password on signup screen.
+allow_fullscan             = 1;                                // Allow players to use full long range scan during this game?
+allow_navcomp              = 1;                                // Allow players to use the Navigation computer during this game?
+allow_ibank                = 1;                                // Allow players to use the Intergalactic Bank IGB during this game?
+allow_genesis_destroy      = 0;                                // Allow players to use genesis torps to destroy planets?
+allow_sofa                 = 0;                                // Is the sub-orbital fighter sofa attack allowed in this game?
+allow_ksm                  = 1;                                // Is the known space map allowed in this game?
+display_password           = 0;                                // True / 1 = Display password on signup screen.
 
 [STARTING_VALUES]
 start_fighters             = 10;                               // The amount of fighters on the ship the player starts with
@@ -212,19 +214,21 @@ space_plague_kills         = '0.20';                           // Percentage of 
 max_credits_without_base   = 10000000;                         // Max amount of credits allowed on a planet without a base
 port_regenrate             = 10;                               // The amount of units regenerated by ports during a scheduler tick
 footer_style               = 'old';                            // Switch between old style footer and new style. Old is text, and only the time until next update. New is a table including server time.
-footer_show_debug          = true;                             // Should the footer show the memory and time to generate page?
-sched_planet_valid_credits = true;                             // Limit captured planets Max Credits to max_credits_without_base
+footer_show_debug          = 1;                                // Should the footer show the memory and time to generate page?
+sched_planet_valid_credits = 1;                                // Limit captured planets Max Credits to max_credits_without_base
 max_upgrades_devices       = 55;                               // Must stay at 55 due to PHP/MySQL cap limit.
 max_emerwarp               = 10;                               // The maximum number of emergency warp devices a player can have at one time
 max_genesis                = 10;                               // The maximum number of genesis devices a player can have at one time
 max_beacons                = 10;                               // The maximum number of beacons a player can have at one time
 max_warpedit               = 10;                               // The maximum number of warpeditors a player can have at one time
-bounty_all_special         = true;                             // Stop access on all Special Ports when you have a federation bounty on you.
-bnt_ls                     = false;                            // Should the game register with the list server? currently not functional
+bounty_all_special         = 1;                                // Stop access on all Special Ports when you have a federation bounty on you.
+bnt_ls                     = 0;                                // Should the game register with the list server? currently not functional
 local_number_dec_point     = '.';                              // Localization regional settings - soon to be moved into languages
 local_number_thousands_sep = ',';                              // Localization regional settings - soon to be moved into languages
 language                   = 'english';                        // Localization regional settings - soon to be moved into languages
 link_forums                = 'http://forums.blacknova.net';    // Address for the forum link
-adminname                  = 'Admin Name';                     // The title for the administrator used when emailing
-disable_cache              = false;                            // In case your server cannot run caching, or you'd prefer not to have it.
-enable_gravatars           = false;                             // Set to true if you'd like to enable gravatars for players
+admin_name                 = 'Game Admin';                     // The title for the administrator
+admin_ship_name            = "Game Admin's ship";              // The title for the administrators ship
+admin_zone_name            = "Game Admin's zone";              // The title for the administrators zone
+disable_cache              = 0;                                // In case your server cannot run caching, or you'd prefer not to have it.
+enable_gravatars           = 0;                                // True / 1 if you'd like to enable gravatars for players
